<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view_shop_content_layout_header"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_shop_content_layout_header"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_shop_content_layout_header">

        <LinearLayout
            android:id="@+id/layout_shop_postcard_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha="0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/view_shop_postcard_tip_left"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="@color/home_divider" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_postcard_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/show"
                android:textColor="@color/home_black_4"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_shop_postcard_tip_right"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="@color/home_divider" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/re_brand"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/kfc"
            android:textColor="@color/home_black"
            android:textSize="22sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_shop_postcard_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_name">

        <LinearLayout
            android:id="@+id/layout_shop_discount_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alpha="0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/view_shop_discount_tip_left"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="@color/home_divider" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_discount_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/dazhe"
                android:textColor="@color/home_black_4"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_shop_discount_tip_right"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="@color/home_divider" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_postcard_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/n_021_300059"
            android:textColor="@color/home_gray_8"
            android:textSize="12sp" />
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_shop_discount_content"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_shop_postcard_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/cornsilk"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_shop_postcard_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textColor="@color/red_light"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_discount_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_menkan"
                android:textColor="@color/saddlebrown"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/tv_shop_discount_price"
                app:layout_constraintTop_toTopOf="@id/tv_shop_discount_price" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_discount_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_vip"
                android:textColor="@color/saddlebrown"
                android:textSize="8sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_shop_discount_price"
                tools:visibility="visible"
                tools:ignore="SmallSp" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/view_shop_discount_content_divider"
            android:layout_width="0.3dp"
            android:layout_height="0dp"
            android:background="@color/home_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_shop_discount_action"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_discount_action"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/linqu"
            android:textColor="@color/saddlebrown"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_table_shop_discount_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/layout_shop_discount_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_shop_discount_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_table_shop_discount_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/youhui"
            android:textColor="@color/home_gray_8"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_table_shop_discount_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/cart_icon_down_arrow" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/table_shop_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_shop_discount_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/layout_table_shop_discount_count"
        android:shrinkColumns="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/layout_table_shop_discount_count"
        app:layout_constraintTop_toBottomOf="@+id/layout_shop_discount_content">

        <TableRow>

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountTag"
                android:background="@drawable/bg_border_full_green"
                android:text="首单"
                android:textColor="@color/green_alpha80" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountContent"
                android:text="新用户下单立减20元" />
        </TableRow>

        <TableRow android:layout_marginTop="2dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountTag"
                android:background="@drawable/bg_border_full_red"
                android:text="促销"
                android:textColor="@color/red_deep" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountContent"
                android:text="来领个1元优惠卷" />
        </TableRow>

        <TableRow android:layout_marginTop="2dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountTag"
                android:background="@drawable/bg_border_full_orange"
                android:text="会员"
                android:textColor="@color/home_orange" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountContent"
                android:text="超级会员领取6元无门槛红包" />
        </TableRow>

        <TableRow android:layout_marginTop="2dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountTag"
                android:background="@drawable/bg_border_full_blue"
                android:text="满减"
                android:textColor="@color/home_blue" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountContent"
                android:text="满30减4，满60减8，满120减20" />
        </TableRow>

        <TableRow android:layout_marginTop="2dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountTag"
                android:background="@drawable/bg_border_full_pink"
                android:text="满赠"
                android:textColor="@color/pink" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountContent"
                android:text="满150赠送大瓶雪碧一瓶" />
        </TableRow>

        <TableRow android:layout_marginTop="2dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountTag"
                android:background="@drawable/bg_border_full_yellow"
                android:text="@string/self"
                android:textColor="@color/home_yellow" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/tableShopDiscountContent"
                android:text="该商户全部商品已由太平洋保险承保，食品安全有保障" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/ivHeadsupArrow"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/headsup_up_arrow"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible" />

</RelativeLayout>